--- a/trusttunnel/setup_wizard/Cargo.toml
+++ b/trusttunnel/setup_wizard/Cargo.toml
@@ -15,3 +15,6 @@ serde = { version = "1.0.163", features = ["derive"] }
 toml = "0.7.4"
 toml_edit = "0.19.10"
 x509-parser = "0.15.0"
+
+[build-dependencies]
+windres = "0.2"
