skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1229,3 +1229,5 @@ commit_hash:
     hash: "057c4de7feb830815666b8ac7d59149090df0e0a"
   "0.99.92":
     hash: "96e1c3659361d0ad57ae2fdea246217621c23552"
+  "0.99.93":
+    hash: "eedba10a4e80407dcdeb9f4472dea1341b295b8d"
