--- a/conandata.yml
+++ b/conandata.yml
@@ -1257,3 +1257,5 @@ commit_hash:
     hash: "8ef278ec5427be2a9bca48c472ee0ab0f7958c14"
   "0.99.106":
     hash: "34c1cd28ee8df690aaf09ce58e3136cd1a797d93"
+  "0.99.107":
+    hash: "22a3fe50cdd0134d1acaa81f3c4be5374282969b"
