skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1275,3 +1275,5 @@ commit_hash:
     hash: "d7207397ef313b58122aac1817b2c5ff799ab6cd"
   "0.99.115":
     hash: "a19abe1331141d4857caa7f0eb66028ec735c80a"
+  "0.99.116":
+    hash: "c04b9485e3db7de51f752c64cdc5fbb426a5a840"
