skipci: Automatic version increment by Bamboo

--- a/conandata.yml
+++ b/conandata.yml
@@ -1285,3 +1285,5 @@ commit_hash:
     hash: "01ac32a1475ff1f190d0670fc5a9cfebdb2c74f2"
   "1.0.2":
     hash: "cd3f2053fbdf66a8b575f7743977c493746bc04c"
+  "1.0.3":
+    hash: "1d50d242d1695757007a92adb72151de4799bad0"
