Pull request 622: Improve network monitoring for macOS and adapters
Squashed commit of the following:

commit f1d5a8425c89f8aab244548d7336dc99243e0f20
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Feb 16 16:45:28 2026 +0400

    Increase gtest discovery timeout to 30 secs

commit a68e815336fd25d8859e6498ee5bed1d0a644c8d
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Feb 16 15:41:06 2026 +0400

    Reset loop in stop method

commit aa7acad469e9146a68d6f1235eb8cb6eb0262740
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Mon Feb 16 15:40:50 2026 +0400

    Use raw pointer instead of weak_ptr in AutoNetworkMonitor

commit 00a1525ce4fa0827ce28a57a8a7b1d85affabaeb
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 15:46:41 2026 +0400

    Fix apple build

commit 900232ad1efe99dbe3a126cf7bf791ee12937e89
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 15:42:32 2026 +0400

    Remove unused variable

commit 8a70e6a785c722465a3a47b736ad31676eddf77d
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 15:24:11 2026 +0400

    Remove unused function

commit 69fe70d40b37e4be344345d1d684e9b511654c96
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 15:23:39 2026 +0400

    Use auto network monitor for win easy adapter

commit 7938518672f6c7c15e04ed4ec0540ac36f07c559
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 15:23:17 2026 +0400

    Use auto network monitor for apple adapter

commit 0d7a0235ef0857b41c2536485fe55b0eacd728a0
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 14:47:28 2026 +0400

    Update docs

commit e84e94ad3fb31bc856dc4112fe8745d4b1c21e0b
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 14:47:08 2026 +0400

    Remove hardcoded "en0" bound interface for macos from setup wizard

commit 0962f39908b06a25cc31f52d0c10a25e35949d56
Author: Andrey Yakushin <a.yakushin@adguard.com>
Date:   Tue Feb 10 14:

--- a/trusttunnel/CMakeLists.txt
+++ b/trusttunnel/CMakeLists.txt
@@ -19,6 +19,7 @@ set(SOURCE_FILES
         src/client.cpp
         src/utils.cpp
         src/connection_info.cpp
+        src/auto_network_monitor.cpp
         )
 
 add_library(vpnlibs_trusttunnel EXCLUDE_FROM_ALL ${SOURCE_FILES})
