--- a/.github/workflows/qt-clients-submodules.yml
+++ b/.github/workflows/qt-clients-submodules.yml
@@ -87,8 +87,10 @@ jobs:
         shell: pwsh
         run: |
           choco install ninja -y
-          pip install -r requirements.txt
-          pip install conan~=$env:CONAN_VER
+          python -m pip install --upgrade pip
+          python -m pip install -r requirements.txt
+          python -m pip install pyyaml
+          python -m pip install conan~=$env:CONAN_VER
 
       - name: Set up MSVC (Windows)
         if: matrix.os == 'windows-latest'
