--- a/.github/workflows/qt-clients-submodules.yml
+++ b/.github/workflows/qt-clients-submodules.yml
@@ -160,6 +160,15 @@ jobs:
         shell: pwsh
         run: cmake --build build --target trusttunnel-qt trusttunnel-qt-helper --config RelWithDebInfo -j 4
 
+      - name: Deploy Qt runtime (Windows)
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        run: |
+          New-Item -ItemType Directory -Force -Path dist | Out-Null
+          Copy-Item build/trusttunnel-qt/trusttunnel-qt.exe dist/
+          Copy-Item build/trusttunnel-qt/trusttunnel-qt-helper.exe dist/
+          windeployqt --release --compiler-runtime --dir dist dist/trusttunnel-qt.exe
+
       - name: Package artifacts (Linux)
         if: matrix.os == 'ubuntu-latest'
         shell: bash
@@ -180,9 +189,8 @@ jobs:
         if: matrix.os == 'windows-latest'
         shell: pwsh
         run: |
-          New-Item -ItemType Directory -Force -Path dist | Out-Null
-          Copy-Item build/trusttunnel-qt/trusttunnel-qt.exe dist/
-          Copy-Item build/trusttunnel-qt/trusttunnel-qt-helper.exe dist/
+          if (-not (Test-Path dist/trusttunnel-qt.exe)) { throw "dist/trusttunnel-qt.exe is missing" }
+          if (-not (Test-Path dist/Qt6Core.dll)) { throw "Qt runtime was not deployed" }
 
       - name: Upload Qt client artifact
         uses: actions/upload-artifact@v4
